[package]
name = "native-json"
version = "0.0.1"
edition = "2021"
description = "Native JSON for Rust"
license = "MIT"
repository = "https://github.com/sweihub/wsd/tree/main/json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.103",features=["parsing"]}
quote = "1.0.21"
