[package]
name = "wsd"
version = "1.0.0"
edition = "2021"
description = "Delivers what simply defined."
license = "MIT"
repository = "https://github.com/sweihub/wsd"
documentation = "https://docs.rs/wsd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = "1.0.147"
serde_json = "1.0.87"
native-json = "1.0.1"

