[package]
name = "wsd"
version = "1.1.1"
edition = "2021"
description = "Delivers what simply defined."
license = "MIT"
repository = "https://github.com/sweihub/wsd"
documentation = "https://docs.rs/wsd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
native-json = { path = "../json" }
# native-json = { version = "1.1"}

